# articulation-program

./: .gitignore  README.md  pyproject.toml
docs/: 日立北1班定式化_2.md  日立北1班定式化_3.md
src/: main.py
src/apps/: opt_apps_layout.py
src/assets/: layout.css  smartphone.css
src/modules/: const.py
src/pages/: app_view_opt.py
src/utils/: en_to_ja.py  logging.py  system.py
