[project]
name = "articulation-program"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.1",
    "polars>=1.32.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "streamlit>=1.47.1",
]

[dependency-groups]
dev = [
    "pyright>=1.1.403",
    "ruff>=0.12.7",
]
