[project]
name = "articulation-program"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "pandas>=2.3.1",
    "polars>=1.32.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "streamlit>=1.47.1",
    "pulp>=2.9",
    "matplotlib>=3.9.0",
    "numpy>=2.0.0",
    "japanize-matplotlib>=1.1.3",
    "poethepoet>=0.36.0",
    "matplotlib-fontja>=1.1.0",
    "openpyxl>=3.1.5",
]

[dependency-groups]
dev = [
    "pyright>=1.1.403",
    "ruff>=0.12.7",
]

[tool.poe.tasks."lint"]
help = "Check code with ruff & pyright"
shell = "ruff format --check . && ruff check --diff . && pyright"

[tool.poe.tasks.fmt]
help = "Format all files in the current directory"
shell = "ruff format . && ruff check --fix ."


[tool.poe.tasks.start]
help = "Run the program"
shell = "streamlit run src/main.py"
